kubernetes/configservice/configservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configservice
  strategy: {}
  template:
    metadata:
      labels:
        app: configservice
    spec:
      containers:
        - image: poel22/stock-ml_configservice
          name: configservice
          resources: {}
          ports:
            - containerPort: 5000
      restartPolicy: Always
status: {}
