kubernetes/configservice/configservice-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: configservice-service
spec:
  selector:
    run: configservice
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: NodePort
